homepage updated, GA on, minor corrections

--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!what-is-data-science.qmd"
+    - "!democratizing-data.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -69,7 +69,7 @@ listing:
     - /viewpoints
     - "!index.qmd"
     - "!editors-note.qmd"
-    - "!gen-ai-framework.qmd"
+    - "!democratizing-data.qmd"
     - "!llms-whitepaper-response.qmd"
     sort: "date desc"
     type: grid
@@ -132,15 +132,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/ideas/posts/2024/02/19/what-is-data-science.qmd">
+<a href="/viewpoints/interviews/posts/2024/03/11/democratizing-data.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## What is data science?
-Is data science a new and exciting set of skills, necessary for analyzing 21st century data? Or is it (as some have claimed) a rebranding of statistics, which has carefully developed time-honored methods for data analysis over the past century? Two popular data science algorithms -- naïve Bayes and eigen centrality -- are used to examine the difference between data scientists, statisticians, and other occupations.   
+## Using natural language processing and machine learning to capture dataset usage
+Real World Data Science speaks with Julia Lane, professor at the NYU Wagner Graduate School of Public Service and visiting fellow at RTI International, about Democratizing Data -- an initiative that seeks to improve public understanding of how datasets are used and the value they provide.   
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](ideas/posts/2024/02/19/images/bubbles.png)
+![](viewpoints/interviews/posts/2024/03/11/images/julia-lane-thumb.png)
 :::
 :::
 
@@ -175,11 +175,11 @@ Welcome to **Real World Data Science**, a new project from the [Royal Statistica
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## We absolutely have to transform and modernise our operation, and realise the value of taking [survey] information, blending it with existing data, administrative data, even third-party private sector data, into a huge data pool and linking it together -- that will create new data products that will serve the public in ways that we never imagined before.
-Robert Santos, director, US Census Bureau
+## Generative AI is based on neural networks, which are so-called ‘black boxes’. This makes it difficult or impossible to explain the inner workings of the model which has potential implications if in the future you are challenged to justify decisioning or guidance based on the model.
+Excerpt from the UK government's framework for the use of generative AI
 
 ::: {.button}
-[Read the interview](viewpoints/interviews/posts/2024/01/15/census-bureau.qmd)
+[Read our key takeaways](viewpoints/editors-blog/posts/2024/01/22/gen-ai-framework.qmd)
 :::
 
 :::
@@ -217,11 +217,11 @@ Robert Santos, director, US Census Bureau
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## We have changed the culture, our techniques, and our data. What we have now are appropriate methodologies to answer appropriate questions. Do we still use qualitative data? A hundred percent, when it is necessary to do so. Do we still use surveys? Yes, we’ve got some of the best surveys in the world. But equally, we also use digital data, administrative data, and we use very modern techniques of analysing those data.
-Professor Sir Ian Diamond, UK national statistician
+## We absolutely have to transform and modernise our operation, and realise the value of taking [survey] information, blending it with existing data, administrative data, even third-party private sector data, into a huge data pool and linking it together -- that will create new data products that will serve the public in ways that we never imagined before.
+Robert Santos, director, US Census Bureau
 
 ::: {.button}
-[Read the interview](viewpoints/interviews/posts/2023/12/15/ian-diamond.qmd)
+[Read the interview](viewpoints/interviews/posts/2024/01/15/census-bureau.qmd)
 :::
 
 :::
