--- a/viewpoints/interviews/posts/2024/03/11/democratizing-data.qmd
+++ b/viewpoints/interviews/posts/2024/03/11/democratizing-data.qmd
@@ -14,17 +14,19 @@ image-alt: Photo of Julia Lane, professor at the NYU Wagner Graduate School of P
 toc: false
 ---
 
-It's difficult to put a figure on how much is spent each year on collecting and publishing data. According to the World Bank, it is [“painfully hard to obtain”](https://blogs.worldbank.org/opendata/how-much-should-governments-spend-data) information just on government spending on data, never mind other bodies and organisations. But investment in data likely constitutes a sizeable annual sum -- somewhere on the order of hundreds of billions of dollars would seem a reasonable (rough) estimate.
+Figuring out how much money is spent annually on collecting and publishing datasets is a challenge. According to the World Bank, it is [“painfully hard to obtain”](https://blogs.worldbank.org/opendata/how-much-should-governments-spend-data) information just on government spending on data, never mind all the other bodies and organisations who invest in the creation of data assets. But there's an even more challenging figure to pin down: How much value does all this data provide? By and large, there is very little data -- or systematic collection of data -- on dataset usage. There’s no easy way to find all the users of a particular dataset and to see how the data has been used, or what research topics it may have contributed to.
 
-Now, here's an even more challenging figure to pin down: How much value does all this data provide? By and large, there is very little data -- or systematic collection of data -- on dataset usage. There’s no easy way to find all the users of a particular dataset and to see how the data has been used, or what research topics it may have contributed to.
-
-Writing in the [Harvard Data Science Review in April 2022](https://hdsr.mitpress.mit.edu/pub/g6e8noiy/release/2), [Julia Lane](https://julialane.org/) and others explained that “the current approach to finding what data sets are used to answer scientific questions ... is largely manual and ad hoc.” They went on to argue that, “Better information on the use of data is likely to have at least two results: (i) government agencies might use the information to describe the return on investment in data sets and (ii) scientists might use the information to reduce the time taken to search and discover other empirical research.”
+Writing in the [Harvard Data Science Review in April 2022](https://hdsr.mitpress.mit.edu/pub/g6e8noiy/release/2), [Julia Lane](https://julialane.org/) and others explained that “the current approach to finding what data sets are used to answer scientific questions ... is largely manual and ad hoc.” They went on to argue: “Better information on the use of data is likely to have at least two results: (i) government agencies might use the information to describe the return on investment in data sets and (ii) scientists might use the information to reduce the time taken to search and discover other empirical research.”
 
 This hope for a better understanding of how datasets are used and the value they provide underpins the creation of “Democratizing Data: A Search and Discovery Platform for Public Data Assets.”
 
 As described on [the platform’s homepage](https://democratizingdata.ai/), Democratizing Data “describes how datasets identified by federal agencies have been used in scientific research. It uses machine learning algorithms to search over 90 million documents and find how datasets are cited, in what publications, and what topics they are used to study.”
 
 But this is just the start of what Lane thinks the project could eventually achieve, as she explains in this interview.
+
+::: keyline
+---
+:::
 
 **How did the Democratizing Data platform come about?**  
 It emerged from three things, really, and I can trace the start of it back to 2016, when I was asked to build a secure environment that could host confidential microdata in order to inform the work of the [Commission on Evidence-Based Policymaking](https://obamawhitehouse.archives.gov/omb/management/commission_evidence).^[The Commission on Evidence-Based Policymaking was “charged with examining all aspects of how to increase the availability and use of government data to build evidence and inform program design, while protecting privacy and confidentiality of those data.”] They asked me to lead on this because I had built the [NORC remote access Data Enclave at the University of Chicago](https://www.norc.org/services-solutions/data-enclave.html) 10 years before that.
@@ -43,7 +45,7 @@ I could give them a list of people, but that list would be biased by my age and 
 
 So, that's how Democratizing Data got started. I thought, really the best way to give a full answer to those sorts of questions is to figure out what datasets are being used in research publications. 
 
-Now, how was I going do that? I could read all the publications and manually write notes about who the authors were, and what the topics were, and what datasets they used. But that's not realistic. So, I thought, well, maybe we could combine natural language processing techniques, with machine learning so that you could “read” all these publications and find out how datasets are cited.
+Now, how was I going do that? I could read all the publications and manually write notes about who the authors were, and what the topics were, and what datasets they used. But that's not realistic. So, I thought, well, maybe we could combine natural language processing techniques with machine learning so that you could “read” all these publications and find out how datasets are cited.
 
 ::: {.pullquote-container}
 ::: grid
@@ -53,24 +55,24 @@ Now, how was I going do that? I could read all the publications and manually wri
 ::: {.g-col-12 .g-col-lg-8 .pullquote-grid .pullquote}
 ![](/images/pullquote-purple.png){width="50px"}
 
-At the moment, it feels a little bit like the Wild West. We're searching for ways to measure how datasets are used, how they're valued, and so on. Federal statistical data and Elsevier's Scopus have been a great starting point for us, but the broader vision is to incorporate other datasets and other publication databases like arXiv and Semantic Scholar.
+We're searching for ways to measure how datasets are used, how they're valued, and so on. Federal statistical data and Elsevier's Scopus have been a great starting point for us, but the broader vision is to incorporate other datasets and other publication databases.
 :::
 :::
 :::
 
 **Would this have been a problem that needed solving if there were common, established citation standards and practices for datasets?**  
-There are great citation practices for datasets, and we’ve had them for 15 years. Back when I was a National Science Foundation program officer, everyone was saying, well, if we just get the plumbing right, people will come and use it. Well, they don’t. Even when there are DOIs available and they're relatively easy to cite, people don't. The plumbing's there, we built it, but they didn't come.
+There *are* great citation practices for datasets, and we’ve had them for 15 years. Back when I was a National Science Foundation (NSF) program officer, everyone was saying, well, if we just get the plumbing right, people will come and use it. Well, they don’t. Even when there are DOIs available and they're relatively easy to cite, people don't. The plumbing's there, we built it, but they didn't come.
 
-So, I think there has to be a demand-side piece, and we talk about that in one of the papers in an upcoming special issue of the [Harvard Data Science Review](https://hdsr.mitpress.mit.edu/). How do you create an incentive structure so that people do provide information about how they've used data? My thinking was that, suppose we can find out who's using what data. Then the incentive structure to an academic is “your name in lights”: you are the world's living expert in orange carrots with green stripes, or whatever. So, we would read the publications, find the datasets, and then you could have a leaderboard of the people who have done the most work in a particular field, and then people would have an incentive both to cite datasets and to let you know when you miss things. And that was when I thought, well, let's put all this information up in a dashboard.
+So, I think there has to be a demand-side piece, and we talk about that in one of the papers in an upcoming special issue of the [Harvard Data Science Review](https://hdsr.mitpress.mit.edu/): How do you create an incentive structure so that people do provide information about how they've used data? My thinking was that, suppose we can find out who's using what data. Then the incentive structure to an academic is “your name in lights”: you are the world's living expert in orange carrots with green stripes, or whatever. So, we would read the publications, find the datasets, and then you could have a leaderboard of the people who have done the most work in a particular field, and then people would have an incentive both to cite datasets and to let you know when you miss things. And that was when I thought, well, let's put all this information up in a dashboard.
 
 **So, is the grand vision for this to create a platform that, essentially, any data owner -- anyone who publishes datasets -- could plug into, connect to, and understand how other people are using their datasets?**  
-That's right. The grand vision is basically to set up a search and discovery portal. Originally, my thinking was that would be super helpful for people just starting out in a field; for a new graduate student or a postdoc to say, “I want to figure out what work has been done on recidivism of welfare recipients relative to access to jobs and neighborhood characteristics,” for example, and for them to see what datasets are available and how have they been used. 
+That's right. The grand vision is basically to set up a search and discovery portal. Originally, my thinking was that would be super helpful for people just starting out in a field; for a new graduate student or a postdoc to say, “I want to figure out what work has been done on recidivism of welfare recipients relative to access to jobs and neighborhood characteristics,” for example, and for them to see what datasets are available and how they have been used. 
 
 But from the data producer side it'd also be useful to know: Who’s using the datasets? Where are the gaps? Where are we maybe not reaching as many people as we thought we were, and how can we change that?
 
-So, while the original idea was to build a platform for researchers, plans changed when the [Evidence Act](https://www.govinfo.gov/content/pkg/PLAW-115publ435/pdf/PLAW-115publ435.pdf) passed, and agencies were required to produce usage statistics for their datasets.^[Specifically, the act requires Federal Agencies to identify and implement methods “for collecting and analyzing digital information on data asset usage by users within and outside of the agency.”]
+So, while the original idea was to build a platform for researchers, plans changed when the [Evidence Act](https://www.govinfo.gov/content/pkg/PLAW-115publ435/pdf/PLAW-115publ435.pdf) passed, and agencies were required to produce usage statistics for their datasets.^[Specifically, the act requires federal agencies to identify and implement methods “for collecting and analyzing digital information on data asset usage by users within and outside of the agency.”]
 
-We started a pilot with the US Department of Agriculture’s Economic Research Service (ERS). They have been a huge supporter and helped us work through a lot of the issues. Then, when we began showing around the ERS wireframes and ideas, the NSF National Center for Science and Engineering Statistics joined in, and so did USDA's National Agricultural Statistics Service and the National Center for Education Statistics and the National Oceanic and Atmospheric Administration.
+We started a pilot with the US Department of Agriculture’s (USDA) Economic Research Service (ERS). They have been a huge supporter and helped us work through a lot of the issues. Then, when we began showing around the ERS wireframes and ideas, the NSF National Center for Science and Engineering Statistics joined in, and so did USDA's National Agricultural Statistics Service and the National Center for Education Statistics and the National Oceanic and Atmospheric Administration.
 
 So, we have these agencies involved and they've really been the drivers, the intellectual partners, pushing the design and the structure forward.
 
@@ -82,12 +84,12 @@ So, we have the Scopus corpus, and we then ran [a Kaggle competition](https://ww
 Human researchers would then validate those snippets as either referring to a dataset or not, and once they've validated the publication-to-dataset dyad, we then pull in all the metadata associated with the publication: authors, institutions, key topics, publication year, countries, etc. – all this information gets piped over to the dashboards.
 
 **You published [a Harvard Data Science Review article about this competition a couple of years ago](https://hdsr.mitpress.mit.edu/pub/g6e8noiy/release/2), and from that I understand that you can actually get quite far with a simple string-matching method for finding datasets, but you would still miss a lot of citations using this approach because of the variability in the way people refer to datasets.**  
-That’s right. There were three different models that that were developed, and each one picks up different aspects of how authors mention data in publications, and all three have been extremely useful. We learned a lot about the variety of ways in which researchers cite the data that they use.
+That’s right. There were three different models that were developed, and each one picks up different aspects of how authors mention data in publications, and all three have been extremely useful. We learned a lot about the variety of ways in which researchers cite the data that they use.
 
 It turns out that more people do cite datasets in references than we had originally thought, but usually they don't cite a DOI, they cite the URL or they cite the exact name of the dataset, so string search of references and URLs pulls out quite a lot of information that the DOIs, *per se*, don't.
 
 **What are the next steps for scaling up the Democratizing Data work?**  
-I think it is more of a sociotechnical issue than a technical one. We have the plumbing, but really what we need to do to figure out the incentives for researchers. We need to build a community around the data, which is what's happened with code and the sharing of code on platforms like GitHub.
+I think it is more of a sociotechnical issue than a technical one. We have the plumbing, but really what we need to do is to figure out the incentives for researchers. We need to build a community around the data, which is what's happened with code and the sharing of code on platforms like GitHub.
 
 Obviously, our initial focus has been on federal statistical data, but there's also a lot of interest in how administrative data or streaming data are being used. 
 
