--- a/careers/posts/2024/03/20/mjones-inteview.qmd
+++ b/careers/posts/2024/03/20/mjones-inteview.qmd
@@ -1,43 +1,43 @@
 ---
-title: "Large language models: Do we need to understand the maths, or simply recognise the limitations?"
+title: "Data science and AI in financial services: An interview with Nationwide's Matthew Jones"
 description: |
-  Do we need to understand the inner workings of large language models before we use them? Or, is it enough to simply teach people to recognise that model outputs can't always be relied upon, and that some use cases are better than others? Members of the Royal Statistical Society’s Data Science and AI Section discuss these and other questions in part two of our Q&A.        
+  Matthew Jones, head of decision science and analytical innovation at building society Nationwide, talks career path, data science tools and skills, and the role of AI in financial services.    
 categories:
-  - Large language models
   - AI
   - Communication
-  - Regulation
-author: Brian Tarran
-date: 05/18/2023
+  - Skills
+  - Financial services
+author: Jonathan Gillard
+date: 03/20/2024 # date is in mm/dd/yyyy
 toc: false
-image: images/google-deepmind-52afknBiUk4-unsplash.png
-image-alt: 3D render of a conceptual visualisation of large language models by artist Tim West. Photo by Google DeepMind on Unsplash.
+image: images/mjones-laptop.png
+image-alt: Screengrab of video interview showing Matthew Jones on the left and Jonathan Gillard on the right. Screengrab is overlaid on a laptop background.
 ---
 
-[article goes here]
+{{< video [replace square brackets and everything inside with embed url from YouTube] >}}
 
 ::: {.g-col-12 .g-col-sm-6}
 ::: {.nav-btn}
 [Back to Careers](/careers/index.qmd)
 :::
 :::
-:::
-:::
 
 ::: further-info
 ::: grid
 ::: {.g-col-12 .g-col-md-12}
-Copyright and licence
-:   © 2023 Royal Statistical Society
-
-<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" style="height:22px!important;vertical-align:text-bottom;"/><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"/></a> This interview is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Images are not covered by this licence. Thumbnail image by <a href="https://unsplash.com/@deepmind?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Google DeepMind</a> on <a href="https://unsplash.com/photos/52afknBiUk4?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>.
-  
-  
+About the author
+:   **Jonathan Gillard** is a professor of statistics and data science at Cardiff University and a member of the [editorial board](https://realworlddatascience.net/viewpoints/editors-blog/posts/2022/10/18/meet-the-team.html) of Real World Data Science.
 :::
+::: {.g-col-12 .g-col-md-6}
+Copyright and licence
+:   © 2024 Royal Statistical Society
 
-::: {.g-col-12 .g-col-md-12}
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" style="height:22px!important;vertical-align:text-bottom;"/><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"/></a> This interview is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Thumbnail background by <a href="https://unsplash.com/@nextiva?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Devin Pickell</a> on <a href="https://unsplash.com/photos/black-and-gray-laptop-computer-p0UwQ-Wd8TM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>.
+
+:::
+::: {.g-col-12 .g-col-md-6}
 How to cite
-:   Tarran, Brian. 2023. "Large language models: Do we need to understand the maths, or simply recognise the limitations?" Real World Data Science, May 18, 2023. [URL](https://realworlddatascience.net/careers/posts/2023/05/18/chatgpt-data-science-pt2.html)
+:   Gillard, Jonathan. 2024. "Data science and AI in financial services: An interview with Nationwide's Matthew Jones." Real World Data Science, March 20, 2024. [URL](https://realworlddatascience.net/careers/posts/2024/03/20/mjones-interview.html)
 :::
 :::
 :::
