--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!democratizing-data.qmd"
+    - "!mjones-inteview.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -56,6 +56,7 @@ listing:
     contents: 
     - /careers
     - "!index.qmd"
+    - "!mjones-inteview.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -70,7 +71,6 @@ listing:
     - "!index.qmd"
     - "!editors-note.qmd"
     - "!democratizing-data.qmd"
-    - "!llms-whitepaper-response.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -132,15 +132,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/interviews/posts/2024/03/11/democratizing-data.qmd">
+<a href="/careers/posts/2024/03/20/mjones-inteview.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Using natural language processing and machine learning to capture dataset usage
-Real World Data Science speaks with Julia Lane, professor at the NYU Wagner Graduate School of Public Service and visiting fellow at RTI International, about Democratizing Data -- an initiative that seeks to improve public understanding of how datasets are used and the value they provide.   
+## Data science and AI in financial services: An interview with Nationwide's Matthew Jones
+Matthew Jones, head of decision science and analytical innovation at building society Nationwide, talks career path, data science tools and skills, and the role of AI in financial services. Interview by Jonathan Gillard, professor of statistics and data science, Cardiff University.   
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/interviews/posts/2024/03/11/images/julia-lane-thumb.png)
+![](careers/posts/2024/03/20/images/mjones-laptop.png)
 :::
 :::
 
