filename typo corrected

--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!mjones-inteview.qmd"
+    - "!mjones-interview.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -56,7 +56,7 @@ listing:
     contents: 
     - /careers
     - "!index.qmd"
-    - "!mjones-inteview.qmd"
+    - "!mjones-interview.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -132,7 +132,7 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/careers/posts/2024/03/20/mjones-inteview.qmd">
+<a href="/careers/posts/2024/03/20/mjones-interview.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
