--- a/careers/posts/2024/03/20/mjones-interview.qmd
+++ b/careers/posts/2024/03/20/mjones-interview.qmd
@@ -8,13 +8,13 @@ categories:
   - Skills
   - Financial services
 author: Jonathan Gillard
-date: 03/20/2024 # date is in mm/dd/yyyy
+date: 03/21/2024 # date is in mm/dd/yyyy
 toc: false
 image: images/mjones-laptop.png
 image-alt: Screengrab of video interview showing Matthew Jones on the left and Jonathan Gillard on the right. Screengrab is overlaid on a laptop background.
 ---
 
-{{< video [replace square brackets and everything inside with embed url from YouTube] >}}
+{{< video https://www.youtube.com/embed/3ZlnGsaAj0Q?si=w7W9quAm0drMWWqL >}}
 
 ::: {.g-col-12 .g-col-sm-6}
 ::: {.nav-btn}
@@ -37,7 +37,7 @@ Copyright and licence
 :::
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-:   Gillard, Jonathan. 2024. "Data science and AI in financial services: An interview with Nationwide's Matthew Jones." Real World Data Science, March 20, 2024. [URL](https://realworlddatascience.net/careers/posts/2024/03/20/mjones-interview.html)
+:   Gillard, Jonathan. 2024. "Data science and AI in financial services: An interview with Nationwide's Matthew Jones." Real World Data Science, March 21, 2024. [URL](https://realworlddatascience.net/careers/posts/2024/03/21/mjones-interview.html)
 :::
 :::
 :::
