contact details updated

--- a/contact.qmd
+++ b/contact.qmd
@@ -7,7 +7,7 @@ title-block-banner: true
 ---
 ## Editorial
 
-- **Email:** [b.tarran@rss.org.uk](mailto:b.tarran@rss.org.uk)
+- **Email:** [rwds@rss.org.uk](mailto:rwds@rss.org.uk)
 
 - **GitHub:** [@realworlddatascience](https://github.com/realworlddatascience)
 
