--- a/contributor-docs/contributor-guidelines.qmd
+++ b/contributor-docs/contributor-guidelines.qmd
@@ -15,7 +15,7 @@ Real World Data Science is built on [Quarto](https://quarto.org/), the new open-
 * **Site users are contributors too.** Through annotation and commenting functionality, site users can interact and converse with authors and other members of the Real World Data Science community. And with all source files hosted on GitHub, users of our site can raise issues, or fork and propose improvements -- leading to a true exchange of knowledge. 
 
 ## The submission process
-1. Contact site editor [Brian Tarran](mailto:b.tarran@rss.org.uk) to discuss your proposed submission.
+1. Contact [Real World Data Science](mailto:rwds@rss.org.uk) to discuss your proposed submission.
 
 2. Write up a short content brief containing the following:
     + Title of submission
@@ -33,7 +33,7 @@ Real World Data Science is built on [Quarto](https://quarto.org/), the new open-
 
 3. Once a content brief is finalised and approved, content is to be prepared in the agreed format and with reference to our [style guide](style-guide.qmd). For simple text-based articles, we recommend using Google Docs or Microsoft Word; for submissions that incorporate technical or multimedia content, such as code, equations or interactive graphics, we recommend the Quarto (.qmd) file format. Use the [RWDS_post_template repository](https://github.com/finnoh/RWDS_post_template) to create your draft article in Quarto using the correct style and formatting. A sample article in the repo (report.qmd) contains code examples for the Quarto features used by Real World Data Science. Documents can be submitted in Jupyter notebook (.ipynb) and R Markdown (.Rmd) formats but will require conversion before publishing.
 
-4. Draft submissions should be sent via email to the editor. Alternatively, contributors can commit their drafts to their own GitHub accounts using the [RWDS_post_template repository](https://github.com/finnoh/RWDS_post_template) and add site editor [Brian Tarran](https://github.com/brtarran) as a collaborator. 
+4. Draft submissions should be sent via email to [Real World Data Science](mailto:rwds@rss.org.uk). Alternatively, contributors can commit their drafts to their own GitHub accounts using the [RWDS_post_template repository](https://github.com/finnoh/RWDS_post_template) and the repository link then shared with [Real World Data Science](mailto:rwds@rss.org.uk).
 
 ## Copyright and content licencing 
 Contributors retain copyright of their work, but agree to publish their work under a Creative Commons licence. Contributors are free to [choose the licence](https://creativecommons.org/choose/) that best suits their content. The chosen licence should be indicated on the draft submission.
