--- a/contributor-docs/datasciencebites.qmd
+++ b/contributor-docs/datasciencebites.qmd
@@ -47,7 +47,7 @@ If you are interested in contributing to [DataScienceBites](/ideas/datasciencebi
 
 3. Decide whether you would like to be a regular contributor or guest contributor. 
 
-4. Contact Real World Data Science editor [Brian Tarran](mailto:b.tarran@rss.org.uk) to discuss. 
+4. Contact [Real World Data Science](mailto:rwds@rss.org.uk) to discuss. 
 
 :::{.callout-important}
 ## Two things to keep in mind
