--- a/ts-and-cs.qmd
+++ b/ts-and-cs.qmd
@@ -47,7 +47,7 @@ We will not link to websites that contain racist, sexual or misleading content; 
 
 The decision of RWDS is final and no correspondence will be entered into. 
 
-If you wish to report a concern, please email [b.tarran@rss.org.uk](mailto:b.tarran@rss.org.uk).
+If you wish to report a concern, please email [rwds@rss.org.uk](mailto:rwds@rss.org.uk).
 
 ## Software and services
 Source code and files for this site are available from [GitHub](https://github.com/realworlddatascience/realworlddatascience.github.io). Use of our GitHub repository is governed by the [Contributor Covenant Code of Conduct](#contributor-covenant-code-of-conduct). 
@@ -149,7 +149,7 @@ Note that unless prior permission is agreed in writing with the editor of RWDS, 
 
 Instances of abusive, harassing, or otherwise unacceptable behavior may be
 reported to the community leaders responsible for enforcement at
-[b.tarran@rss.org.uk](mailto:b.tarran@rss.org.uk).
+[rwds@rss.org.uk](mailto:rwds@rss.org.uk).
 All complaints will be reviewed and investigated promptly and fairly.
 
 All community leaders are obligated to respect the privacy and security of the
