--- a/viewpoints/editors-blog/posts/2022/10/18/meet-the-team.qmd
+++ b/viewpoints/editors-blog/posts/2022/10/18/meet-the-team.qmd
@@ -7,7 +7,7 @@ categories:
   - Biographies
 author: Editorial Board
 date: 10/18/2022
-date-modified: 11/30/2023
+date-modified: 03/21/2023
 toc: false
 image: images/team.png
 image-alt: Portrait photos of 12 members of the Real World Data Science Editorial team
@@ -16,15 +16,6 @@ aliases:
   - /news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.html
 comments: false
 ---
-## Editor
-**Brian Tarran**
-
-::: {.column-margin}
-![](images/Brian.png)
-:::
-
-I am a writer and editor with 20 years of experience covering the research and data space. I have worked for the Royal Statistical Society (RSS) for the past 8 years, and was editor of [Significance Magazine](https://www.significancemagazine.com/) (a joint publication of the RSS, the American Statistical Association and the Statistical Society of Australia) prior to the launch of Real World Data Science. I am a former editor of Research-Live.com and was launch editor of Impact magazine, both published by the Market Research Society. 
-
 ## Editorial Board
 **Sophie Carr (chair)**
 
@@ -147,3 +138,11 @@ I have been working, researching, consulting and teaching in the data science sp
 I'm a principal data scientist at Uniper where I lead a team that focuses mainly on financial business processes and upskilling initiatives. We run projects end to end: from use case ideation, requirement collection and translation to prototyping, assessment, deployment and maintenance. Besides the core analytical and data engineering duties, overarching topics such as data design, data governance and  data strategy predominate my days. In my previous role, at the German Economic Institute, I contributed to the development of a cross-functional department that helps apply data science methods in economic research. Projects often involve geospatial analyses or natural language processing. Before that, I worked as a data scientist in customer and marketing analytics, doing statistical analyses such as marketing mix modelling. I have a master's degree in statistics from Warwick University, a bachelor's degree in economics from the University of Cologne and I'm trained as an assistant tax consultant in Germany. 
 
 I see data science as a creative way to solve problems using software engineering and quantitative modelling techniques and I like to build software pieces that people can interact with. I think that there still exists a lot of confusion about data science as a discipline. Reducing it would promote the realisation of its potential for individuals, as a profession, and our society, as a form of digitalisation. I hope that with Real World Data Science we can provide guidance and clarification to everybody engaged or interested in the field and accompany this young profession's development.
+
+::: keyline
+---
+:::
+
+## Past team members
+**Brian Tarran**  
+Brian is the founding editor of Real World Data Science and former head of data science platform for the Royal Statistical Society (RSS). He worked for the RSS from 2014 to 2024, initially as editor of [Significance Magazine](https://www.significancemagazine.com/), a joint publication of the RSS, the American Statistical Association and the Statistical Society of Australia. He launched Real World Data Science in October 2022. He is a former editor of Research-Live.com and was launch editor of Impact magazine, both published by the Market Research Society. 
