Add ref to README in contrib docs

--- a/contributor-docs/contributor-guidelines.qmd
+++ b/contributor-docs/contributor-guidelines.qmd
@@ -12,7 +12,9 @@ Real World Data Science is built on [Quarto](https://quarto.org/), the new open-
 
 * **Content can be both engaging *and* interactive.** Many data scientists learn by doing, so code can be made available as R Markdown or Jupyter Notebook files to be reused and experimented with offline. Or, the same documents can be used online through tools like Google Colab and Binder. Where appropriate, the use of interactive displays and Shiny apps is encouraged, allowing for data visualisations to be interrogated and regenerated on the fly.  
 
-* **Site users are contributors too.** Through annotation and commenting functionality, site users can interact and converse with authors and other members of the Real World Data Science community. And with all source files hosted on GitHub, users of our site can raise issues, or fork and propose improvements -- leading to a true exchange of knowledge. 
+* **Site users are contributors too.** Through annotation and commenting functionality, site users can interact and converse with authors and other members of the Real World Data Science community. And with all source files hosted on GitHub, users of our site can raise issues, or fork and propose improvements -- leading to a true exchange of knowledge.
+
+For more on how to work with Real World Data Science via GitHub, check out our [repository README](https://github.com/realworlddatascience/realworlddatascience.github.io/blob/main/README.md).
 
 ## The submission process
 1. Contact [Real World Data Science](mailto:rwds@rss.org.uk) to discuss your proposed submission.
