--- a/ideas/posts/2024/05/06/ai-series-4.qmd
+++ b/ideas/posts/2024/05/06/ai-series-4.qmd
@@ -25,7 +25,7 @@ toc: true
 About the authors
 : **Author name** bio goes here.
 
-: **Author name** bio goes here
+: **Author name** bio goes here.
 :::
 
 ::: {.g-col-12 .g-col-md-6}
