--- a/ideas/posts/2024/05/20/ai-series-6.qmd
+++ b/ideas/posts/2024/05/20/ai-series-6.qmd
@@ -44,4 +44,4 @@ How to cite
 :::
 :::
 
-<!-- Make sure to update main site homepage (index.qmd) before publishing. See README for details. -->
+<!-- Make sure to update main site homepage (index.qmd) before publishing. See README for details -->
