added Zenodo community info

--- a/contributor-docs/contributor-guidelines.qmd
+++ b/contributor-docs/contributor-guidelines.qmd
@@ -37,6 +37,8 @@ For more on how to work with Real World Data Science via GitHub, check out our [
 
 4. Draft submissions should be sent via email to [Real World Data Science](mailto:rwds@rss.org.uk). Alternatively, contributors can commit their drafts to their own GitHub accounts using the [RWDS_post_template repository](https://github.com/finnoh/RWDS_post_template) and the repository link then shared with [Real World Data Science](mailto:rwds@rss.org.uk).
 
+> For more information on how to work with Real World Data Science via GitHub, check out our [GitHub repository README](https://github.com/realworlddatascience/realworlddatascience.github.io/blob/main/README.md).
+
 ## Copyright and content licencing 
 Contributors retain copyright of their work, but agree to publish their work under a Creative Commons licence. Contributors are free to [choose the licence](https://creativecommons.org/choose/) that best suits their content. The chosen licence should be indicated on the draft submission.
 
@@ -48,6 +50,8 @@ Once revisions are complete and content is accepted for publication, authors wil
 ## Post-publication
 Contributors and editors will work together to promote content via social media platforms -- Twitter/X, LinkedIn, blogs -- and in other channels as appropriate -- e.g., in response to related questions on Quora or Stack Overflow. 
 
-Contributors are encouraged to monitor their content regularly for user comments and discussions. Engaging in discussions with users -- whether through the Real World Data Science platform or via social media and other channels -- is an effective way of developing an audience: it builds profile for the contributor and their content, and encourages other users to find and interact with content. 
+Contributors are encouraged to monitor their content regularly for user comments and discussions. Engaging in discussions with users -- whether through the Real World Data Science platform or via social media and other channels -- is an effective way of developing an audience: it builds profile for the contributor and their content, and encourages other users to find and interact with content.
+
+Contributors also have the option of uploading the source code and files for their articles to [Zenodo](https://zenodo.org/), an open science repository, and submitting this material to the [Real World Data Science community](https://zenodo.org/communities/realworlddatascience). When a Zenodo record is created, a DOI is assigned, and this DOI can then be added to your published article on Real World Data Science. For more details on working with Zenodo, see [help.zenodo.org](https://help.zenodo.org/).
 
 <!-- Real World Data Science will also promote new content regularly via a newsletter, which users of the platform can sign up to receive. We will also look to partner with other newsletter publishers so that Real World Data Science content is featured within their mailings. -->
